--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
           <button type="button" class="hero-button" data-modal-open>Заказать услугу</button>
         </div>
+
       </section>
 
       <!-- Peculiarities -->
@@ -491,6 +492,28 @@
             <use href="./images/icons.svg#icon-btn-close"></use>
           </svg>
         </button>
+                
+        <form class="form">
+          <h2 class="form-direction">Оставьте свои данные, мы вам перезвоним</h2>
+          <div class="form-fieled">
+          <label for="name">Имя</label>
+          <input type="text" name="name" id="name" >
+          </div>
+          <div class="form-fieled">
+          <label for="tel">Телефон</label>
+          <input type="tel" name="tel" id="tel" >
+          </div>
+          <div class="form-fieled">
+          <label for="mail">Почта</label>
+          <input type="email" name="mail" id="mail" >
+          </div>
+         
+         <div class="form-fieled">
+          <label for="comment">Коментарий</label>
+          <textarea name="comment" id="comment"  placeholder="Введите текст"></textarea>
+          </div>
+           <button type="submit">Отправить</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
