--- a/index.html
+++ b/index.html
@@ -482,6 +482,11 @@
             </li>
           </ul>
         </div>
+        <div class="footer-form">
+          <label for="distribution">Подпишитесь на рассылку</label>
+          <input type="email" name="distribution" id="distribution" placeholder="E-mail">
+          <button type="submit">Подписаться</button>
+        </div>
       </div>
     </footer>
 
