--- a/index.html
+++ b/index.html
@@ -499,25 +499,29 @@
         </button>
                 
         <form class="form">
-          <h2 class="form-direction">Оставьте свои данные, мы вам перезвоним</h2>
+          <b class="form-direction">Оставьте свои данные, мы вам перезвоним</b>
           <div class="form-fieled">
           <label for="name">Имя</label>
-          <input type="text" name="name" id="name" >
+          <input type="text" name="name" id="name" сlass="input-form">
           </div>
           <div class="form-fieled">
           <label for="tel">Телефон</label>
-          <input type="tel" name="tel" id="tel" >
+          <input type="tel" name="tel" id="tel" сlass="input-form">
           </div>
           <div class="form-fieled">
           <label for="mail">Почта</label>
-          <input type="email" name="mail" id="mail" >
+          <input type="email" name="mail" id="mail" сlass="input-form">
           </div>
          
          <div class="form-fieled">
           <label for="comment">Коментарий</label>
-          <textarea name="comment" id="comment"  placeholder="Введите текст"></textarea>
+          <textarea name="comment" id="comment" class="coment-form" placeholder="Введите текст"></textarea>
           </div>
-           <button type="submit">Отправить</button>
+
+          <div class="form-fieled">
+            <label for="" class="clause">Соглашаюсь с рассылкой и принимаю <a href="" class="clause-link"> Условия договора</a></label>
+          </div>
+           <button type="submit" class="btn-form">Отправить</button>
         </form>
       </div>
     </div>
