--- a/portfolio.html
+++ b/portfolio.html
@@ -371,6 +371,23 @@
             </li>
           </ul>
         </div>
+        <div class="footer-form">
+          <label for="distribution">Подпишитесь на рассылку</label>
+          <div class="follow">
+            <input
+              type="email"
+              name="distribution"
+              id="distribution"
+              placeholder="E-mail"
+            />
+            <button type="submit" class="telegram-btn">
+              Подписаться
+              <svg class="icon-telegram-form" width="24" height="24">
+                <use href="./images/icons.svg#telegram-form"></use>
+              </svg>
+            </button>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
