--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
 
         <form class="form" autocomplete="off">
           <div class="form-fieled">
-            <label for="name">Имя</label>
+            <label for="name" class="form-fieled-lable">Имя</label>
 
             <input type="text" name="name" id="name" class="input-form" />
             <svg class="icon-form" width="18" height="18">
@@ -518,7 +518,7 @@
           </div>
 
           <div class="form-fieled">
-            <label for="tel">Телефон</label>
+            <label for="tel" class="form-fieled-lable">Телефон</label>
             <input type="tel" name="tel" id="tel" class="input-form" />
             <svg class="icon-form" width="18" height="18">
               <use href="./images/icons.svg#icon-phone"></use>
@@ -526,7 +526,7 @@
           </div>
 
           <div class="form-fieled">
-            <label for="mail">Почта</label>
+            <label for="mail" class="form-fieled-lable">Почта</label>
             <input type="email" name="mail" id="mail" class="input-form" />
             <svg class="icon-form" width="18" height="18">
               <use href="./images/icons.svg#icon-email"></use>
@@ -543,16 +543,17 @@
             ></textarea>
           </div>
 
-          <div class="form-fieled">
-            <label class="clause">
-              <input
-                class="checkbox"
-                type="checkbox"
-                name="accept"
-                value="accept"
-              />
+          <div class="form-fieled checkbox-line">
+            <input
+              class="checkbox visually-hidden"
+              type="checkbox"
+              name="accept"
+              value="accept"
+              id="accept"
+            />
+            <label class="clause" for="accept">
               <span class="icon-checkbox">
-                <svg class="icon-check" width="16" height="15">
+                <svg class="check-icon" width="16" height="15">
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
